--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,58 +5,56 @@
     background-size: cover;
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 70vh;
-  }
-  
-  .form {
+}
+
+.form {
     background-color: white;
     border-radius: 10px;
     padding: 2rem;
     min-width: 80%;
     margin: 2rem;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-  }
-  
-  .title {
+}
+
+.title {
     color: #00a278;
-  }
-  
-  .secondary-action {
+}
+
+.secondary-action {
     padding: 1rem 0;
-  }
-  
-  .link {
-    display: flex;
-    justify-content: end;
+}
+
+.link {
     font-weight: 700;
     text-decoration: none;
-    color: #45c09f;
-  }
-  
-  .link:focus {
+}
+
+.link:focus {
     color: #00a278;
-  }
-  
-  .link:active {
+}
+
+.link:active {
     color: #45c09f;
-  }
-  
-  .link:visited {
+}
+
+.link:visited {
     color: #45c09f;
-  }
-  
-  .button {
-      background-color: #00a278 !important;
-  }
-  
-  .button:hover {
-      background-color: #00845c !important;
-  }
-  
-  @media screen and (min-width: 768px) {
-    .form {
-      min-width: 24rem;
+}
+
+.button {
+    background-color: #00a278 !important;
+}
+
+.button:hover {
+    background-color: #00845c !important;
+}
+
+@media screen and (min-width: 768px) {
+    .content {
+        justify-content: flex-end;
     }
-  }
-  
+    .form {
+        min-width: 24rem;
+    }
+}
