--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,11 +1,10 @@
 .content {
-  background-image: url("../assets/hero_image.png");
+  background-image: url("../../assets/hero_image.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 70vh;
 }
 
@@ -27,11 +26,8 @@
 }
 
 .link {
-  display: flex;
-  justify-content: end;
   font-weight: 700;
   text-decoration: none;
-  color: #45c09f;
 }
 
 .link:focus {
@@ -55,6 +51,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .content {
+    justify-content: flex-end;
+  }
   .form {
     min-width: 24rem;
   }
