--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,10 +1,11 @@
 .content {
-  background-image: url("../assets/hero_image.png");
+  background-image: url("../../assets/hero_image.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 70vh;
 }
 
@@ -26,8 +27,11 @@
 }
 
 .link {
+  display: flex;
+  justify-content: end;
   font-weight: 700;
   text-decoration: none;
+  color: #45c09f;
 }
 
 .link:focus {
@@ -51,9 +55,6 @@
 }
 
 @media screen and (min-width: 768px) {
-  .content {
-    justify-content: flex-end;
-  }
   .form {
     min-width: 24rem;
   }
